[package]
name = "use_common_utils"
version = "0.1.0"
description = "Lints to check usage of common utils"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
use_common_serde_utils = { path = "./use_common_serde_utils", features = ["rlib"] }
dylint_linting = "4.0.1"

[package.metadata.rust-analyzer]
rustc_private = true

[workspace]
members = ["./use_common_serde_utils"]

[workspace.dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "238edf273d195c8e472851ebd60571f77f978ac8" }

[workspace.lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ["cfg(dylint_lib, values(any()))"]

#[workspace.metadata.dylint]
#libraries = [
    #{ path = "../use_common_utils" }
#]
