[package]
name = "use_common_serde_utils"
version = "0.1.0"
authors = ["authors go here"]
description = "description goes here"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[[example]]
name = "tovalue"
path = "ui/tovalue.rs"

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "238edf273d195c8e472851ebd60571f77f978ac8" }
dylint_linting = "4.0.1"
once_cell = "1.21.1"

[dev-dependencies]
dylint_testing = "4.0.1"
serde_json = "1.0.140"

[package.metadata.rust-analyzer]
rustc_private = true

[lints]
workspace = true
