[package]
name = "use_common_serde_utils"
version = "0.1.0"
description = "description goes here"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "tovalue"
path = "ui/tovalue.rs"

[dependencies]
clippy_utils = { workspace = true }
dylint_linting = { version = "4.0.1" }

[dev-dependencies]
dylint_testing = "4.0.1"
serde_json = "1.0.140"

[features]
rlib = ["dylint_linting/constituent"]

[package.metadata.rust-analyzer]
rustc_private = true

[lints]
workspace = true
